gh-18: implemented a getManaged method (#19)
